@@ -32,6 +32,7 @@ test {
             '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
             '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
     ]
+    jvmArgs '--add-opens=javafx.graphics/com.sun.javafx=ALL-UNNAMED'
 }
 
 application {
